--- a/case_study_final.ipynb
+++ b/case_study_final.ipynb
@@ -5,7 +5,8 @@
    "id": "6a57e3c2",
    "metadata": {},
    "source": [
-    "# Routing for Social Good — OMMB Case Study (Professional Edition)\n",
+    "# Routing for Social Good — OMMB Case Study \n",
+    "\n",
     "\n",
     "**Author:** Data Science Team  \n",
     "\n",
@@ -74,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "id": "f188b848",
    "metadata": {},
    "outputs": [],
    "source": [
-    "DEPOSIT_FILE = 'Deposits Transactions 2023 2024.xlsx'\n",
-    "DEPOT_FILE = 'Depot Information.xlsx'\n",
-    "DIST_FILE = 'Optional - Driving Distance and Time.xlsx'\n",
+    "DEPOSIT_FILE = 'data/Deposits Transactions 2023 2024.xlsx'\n",
+    "DEPOT_FILE = 'data/Depot Information.xlsx'\n",
+    "DIST_FILE = 'data/Optional - Driving Distance and Time.xlsx'\n",
     "\n",
     "\n",
     "trans_df = pd.read_excel(DEPOSIT_FILE)\n",
@@ -1343,7 +1344,15 @@
    "metadata": {},
    "source": [
     "### We now have all the numbers we need for the report:\n",
-    "### MetricValueTotal depots37 (36 + HQ)Pickup depots14 (8 Local + 6 Tulsa)Shipping depots22 (8 Kansas + 14 Other)Local route time5.8 hrs (3.2 driving + 2.6 service)Tulsa route time7.2 hrs (5.2 driving + 2.0 service)Weekly driver hours18.8 hrsLocal frequencyTwice weekly (Mon/Thu)Tulsa frequencyWeekly (Wed)"
+    "\n",
+    "- MetricValueTotal depots : 37 (36 + HQ)\n",
+    "- Pickup depots: 14 (8 Local + 6 Tulsa)\n",
+    "- Shipping depots: 22 (8 Kansas + 14 Other)\n",
+    "- Local route time: 5.8 hrs (3.2 driving + 2.6 service)\n",
+    "- Tulsa route time: 7.2 hrs (5.2 driving + 2.0 service)\n",
+    "- Weekly driver hours: 18.8 hrs\n",
+    "- Local frequency: Twice weekly (Mon/Thu)\n",
+    "- Tulsa frequency: Weekly (Wed)"
    ]
   },
   {
